# PeakRDL-euvm

./: README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
src/peakrdl_euvm/: __about__.py  __peakrdl__.py  exporter.py
src/peakrdl_euvm/templates/: utils.d  uvm_reg.d  uvm_reg_block-mem.d  uvm_reg_block.d  uvm_vreg.d
test/: generate_testcase_data.py
